force-app/main/default/objects/Venue__c/fields/AddressLEGACY__c.field-meta.xml
<CustomField>
    <fullName>AddressLEGACY__c</fullName>
    <label>AddressLEGACY</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>