force-app/main/default/objects/Venue__c/fields/AutomationDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationDateTime__c</fullName>
    <description>Used in flows to trigger apex when doing record updates with dataloader</description>
    <label>AutomationDateTime</label>
    <type>DateTime</type>
</CustomField>