force-app/main/default/objects/Venue__c/fields/Distance_from_Pretoria_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Pretoria_Km__c</fullName>
    <label>Distance from Pretoria (Km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>