force-app/main/default/objects/Venue__c/fields/Google_Maps_Link_to_Venue__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Link_to_Venue__c</fullName>
    <inlineHelpText>Provide a Google Maps Link to the venue</inlineHelpText>
    <label>Google Maps Link to Venue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>