force-app/main/default/objects/Venue__c/fields/Has_a_backstage_VIP_area__c.field-meta.xml
<CustomField>
    <fullName>Has_a_backstage_VIP_area__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The venue have a backstage VIP area with a private toilet</inlineHelpText>
    <label>Has a backstage VIP area with Toilet</label>
    <type>Checkbox</type>
</CustomField>