force-app/main/default/objects/Venue__c/fields/Indoor_or_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Indoor_or_Outdoor__c</fullName>
    <label>Indoor or Outdoor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Binne</fullName>
            </value>
            <value>
                <fullName>Buitelug</fullName>
                <label>Builelug</label>
            </value>
            <value>
                <fullName>Tent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>