force-app/main/default/objects/Venue__c/fields/Seat_Layout__c.field-meta.xml
<CustomField>
    <fullName>Seat_Layout__c</fullName>
    <label>Seat Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tafels</fullName>
            </value>
            <value>
                <fullName>Teaterstyl</fullName>
            </value>
            <value>
                <fullName>Ander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>