force-app/main/default/objects/Venue__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Town</label>
    <referenceTo>Town__c</referenceTo>
    <relationshipLabel>Venues</relationshipLabel>
    <relationshipName>Venues</relationshipName>
    <type>Lookup</type>
</CustomField>