force-app/main/default/objects/Venue__c/fields/Town_Name_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Town_Name_Duplicate_Check__c</fullName>
    <inlineHelpText>This is a text field containing the Town Name. Used in duplicate rules</inlineHelpText>
    <label>Town Name (Duplicate Check)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>