force-app/main/default/objects/Venue__c/fields/UpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>UpdateDateTime__c</fullName>
    <description>Used to trigger flows during a dataload</description>
    <label>UpdateDateTime</label>
    <type>DateTime</type>
</CustomField>