force-app/main/default/objects/Venue__c/fields/Venue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Venue_Capacity__c</fullName>
    <label>Venue Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>