force-app/main/default/objects/Venue__c/fields/Venue_Type__c.field-meta.xml
<CustomField>
    <fullName>Venue_Type__c</fullName>
    <label>Venue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>