force-app/main/default/objects/Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AddressLEGACY__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Address__Street__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>