force-app/main/default/objects/Venue__c/listViews/All_with_Full_Address.listView-meta.xml
<ListView>
    <fullName>All_with_Full_Address</fullName>
    <columns>NAME</columns>
    <columns>AddressLEGACY__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Address__Street__s</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Address__Street__s</field>
        <operation>notEqual</operation>
    </filters>
    <label>All with Full Address</label>
</ListView>