force-app/main/default/objects/Venue__c/listViews/Possible_duplicates.listView-meta.xml
<ListView>
    <fullName>Possible_duplicates</fullName>
    <columns>NAME</columns>
    <columns>AddressLEGACY__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Duplicate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Possible duplicates</label>
</ListView>